{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 56,
  "lineage": "485384d4-ced2-c248-bd70-0c301dc3cc7c",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654297114:loadbalancer/app/my-ecs/fecac441f68bf1bd",
            "arn_suffix": "app/my-ecs/fecac441f68bf1bd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "my-ecs-1348972458.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": true,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654297114:loadbalancer/app/my-ecs/fecac441f68bf1bd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "my-ecs",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0f28a523776283a42"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01276493c91093582"
              },
              {
                "subnet_id": "subnet-08243afa53e8e9d28"
              }
            ],
            "subnets": [
              "subnet-01276493c91093582",
              "subnet-08243afa53e8e9d28"
            ],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": {
            },
            "vpc_id": "vpc-089bb37c4f621abb7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ex_http",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654297114:listener/app/my-ecs/fecac441f68bf1bd/438424009f30ec78",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:654654297114:targetgroup/tf-2024121712062826230000000d/48936b351ad98b75",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654297114:listener/app/my-ecs/fecac441f68bf1bd/438424009f30ec78",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:654654297114:loadbalancer/app/my-ecs/fecac441f68bf1bd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_lb.this",
            "module.alb.aws_lb_target_group.this",
            "module.alb.aws_security_group.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "my_ecs_tg",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:654654297114:targetgroup/tf-2024121712062826230000000d/48936b351ad98b75",
            "arn_suffix": "targetgroup/tf-2024121712062826230000000d/48936b351ad98b75",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:654654297114:targetgroup/tf-2024121712062826230000000d/48936b351ad98b75",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "true",
            "name": "tf-2024121712062826230000000d",
            "name_prefix": "tf-",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group/sg-0f28a523776283a42",
            "description": "Security group for my-ecs application load balancer",
            "egress": [],
            "id": "sg-0f28a523776283a42",
            "ingress": [],
            "name": "my-ecs-2024121712062827340000000e",
            "name_prefix": "my-ecs-",
            "owner_id": "654654297114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group-rule/sgr-0d38b575de3be54f2",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0d38b575de3be54f2",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f28a523776283a42",
            "security_group_rule_id": "sgr-0d38b575de3be54f2",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "all_http",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group-rule/sgr-0a22e66191da1bc4d",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0a22e66191da1bc4d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0f28a523776283a42",
            "security_group_rule_id": "sgr-0a22e66191da1bc4d",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs",
              "terraform-aws-modules": "alb"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.alb.aws_security_group.this",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-04524ed3615ae1553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04524ed3615ae1553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          }
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group/sg-0a8e905ec8c1790c9",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a8e905ec8c1790c9",
            "ingress": [],
            "name": "my-ecs-20241217120629549000000011",
            "name_prefix": "my-ecs-",
            "owner_id": "654654297114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_service",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "alb_ingress_3000",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Service port",
            "from_port": 8080,
            "id": "sgrule-3283278785",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a8e905ec8c1790c9",
            "security_group_rule_id": "sgr-0ca92974db47b5041",
            "self": false,
            "source_security_group_id": "sg-0f28a523776283a42",
            "timeouts": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3687124586",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0a8e905ec8c1790c9",
            "security_group_rule_id": "sgr-0782155ec9451b746",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.alb.aws_security_group.this",
            "module.ecs_service.aws_security_group.this",
            "module.ecs_service.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-04524ed3615ae1553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "available_ip_address_count": 4091,
            "cidr_block": "10.0.0.0/20",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04524ed3615ae1553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "state": "available",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          }
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group/sg-0540ea445daaabf88",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0540ea445daaabf88",
            "ingress": [],
            "name": "my-ecs-standalone-20241217120629539700000010",
            "name_prefix": "my-ecs-standalone-",
            "owner_id": "654654297114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs-standalone",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ecs_task_definition",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-4005606346",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0540ea445daaabf88",
            "security_group_rule_id": "sgr-07db98afbb89c03ac",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.ecs_task_definition.aws_security_group.this",
            "module.ecs_task_definition.data.aws_subnet.this",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:network-acl/acl-0fb9a24312e4a93cc",
            "default_network_acl_id": "acl-0fb9a24312e4a93cc",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fb9a24312e4a93cc",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "654654297114",
            "subnet_ids": [
              "subnet-00ce0c487f25c2087",
              "subnet-01276493c91093582",
              "subnet-04524ed3615ae1553",
              "subnet-08243afa53e8e9d28"
            ],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:route-table/rtb-0ba06972d764e7a73",
            "default_route_table_id": "rtb-0ba06972d764e7a73",
            "id": "rtb-0ba06972d764e7a73",
            "owner_id": "654654297114",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:security-group/sg-0e74a194765f92f28",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0e74a194765f92f28",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "654654297114",
            "revoke_rules_on_delete": false,
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e6e785c0eca280b",
            "arn": "arn:aws:ec2:us-east-1:654654297114:elastic-ip/eipalloc-05e6e785c0eca280b",
            "domain": "vpc",
            "id": "eipalloc-05e6e785c0eca280b",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-44-208-153-134.compute-1.amazonaws.com",
            "public_ip": "44.208.153.134",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:internet-gateway/igw-074a20945c9048865",
            "id": "igw-074a20945c9048865",
            "owner_id": "654654297114",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05e6e785c0eca280b",
            "association_id": "eipassoc-06745b0b87a7075cf",
            "connectivity_type": "public",
            "id": "nat-036ad8cc2489ba2b9",
            "network_interface_id": "eni-080666ef5a0d4ac79",
            "private_ip": "10.0.48.58",
            "public_ip": "44.208.153.134",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01276493c91093582",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e4d6d388c781fe4e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-036ad8cc2489ba2b9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e4d6d388c781fe4e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-074a20945c9048865",
            "id": "r-rtb-0e3cd32ccdd2ee7c01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3cd32ccdd2ee7c0",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:route-table/rtb-0e4d6d388c781fe4e",
            "id": "rtb-0e4d6d388c781fe4e",
            "owner_id": "654654297114",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:route-table/rtb-0e3cd32ccdd2ee7c0",
            "id": "rtb-0e3cd32ccdd2ee7c0",
            "owner_id": "654654297114",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016f943d96c3c2a34",
            "route_table_id": "rtb-0e4d6d388c781fe4e",
            "subnet_id": "subnet-04524ed3615ae1553"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08f7f8da7bcc4d053",
            "route_table_id": "rtb-0e4d6d388c781fe4e",
            "subnet_id": "subnet-00ce0c487f25c2087"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077f1647a3a14774d",
            "route_table_id": "rtb-0e3cd32ccdd2ee7c0",
            "subnet_id": "subnet-01276493c91093582"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02c38019754ede507",
            "route_table_id": "rtb-0e3cd32ccdd2ee7c0",
            "subnet_id": "subnet-08243afa53e8e9d28"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-04524ed3615ae1553",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04524ed3615ae1553",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-00ce0c487f25c2087",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ce0c487f25c2087",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-01276493c91093582",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.48.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01276493c91093582",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:subnet/subnet-08243afa53e8e9d28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.49.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08243afa53e8e9d28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "654654297114",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "vpc_id": "vpc-089bb37c4f621abb7"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:654654297114:vpc/vpc-089bb37c4f621abb7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fb9a24312e4a93cc",
            "default_route_table_id": "rtb-0ba06972d764e7a73",
            "default_security_group_id": "sg-0e74a194765f92f28",
            "dhcp_options_id": "dopt-0cb0659b75a42a45b",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089bb37c4f621abb7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ba06972d764e7a73",
            "owner_id": "654654297114",
            "tags": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            },
            "tags_all": {
              "Example": "my-ecs",
              "Name": "my-ecs",
              "Repository": "https://github.com/terraform-aws-modules/terraform-aws-ecs"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}